first steps with BuchhaltungView

--- a/frontend/themes/hypnobook/main-layout.css
+++ b/frontend/themes/hypnobook/main-layout.css
@@ -55,3 +55,7 @@ vaadin-scroller[slot="drawer"][overflow~="bottom"] {
 [slot="drawer"]:is(header, footer):is(:empty) {
   display: none;
 }
+
+.footer-div {
+  flex-direction: column;
+}
