--- a/frontend/themes/hypnobook/main-layout.css
+++ b/frontend/themes/hypnobook/main-layout.css
@@ -62,25 +62,22 @@ vaadin-scroller[slot="drawer"][overflow~="bottom"] {
 
 
 
-.demo {
-  -webkit-box-shadow: 0px 0px 14px 2px rgba(0,0,0,0.55);
-  box-shadow: 0px 0px 14px 2px rgba(0,0,0,0.55);
-}
-.demo {
+.periode-card {
+  -webkit-box-shadow: 0px 0px 14px 2px rgba(0, 0, 0, 0.55);
+  box-shadow: 0px 0px 14px 2px rgba(0, 0, 0, 0.55);
+
   -webkit-border-radius: 10px;
   border-radius: 10px;
-}
 
-.demo {
   background-color: var(--lumo-base-color) linear-gradient(var(--lumo-contrast-5pct), var(--lumo-contrast-5pct));
   margin: 10px auto 0;
-  width: 200px;
+  width: 300px;
   height: 60px;
   color: var(--lumo-primary-text-color);;
   padding: 10px;
 }
 
-.demo span {
+.periode-card span {
   text-align: center;
   width: -webkit-fill-available;
 }
