--- a/frontend/themes/hypnobook/main-layout.css
+++ b/frontend/themes/hypnobook/main-layout.css
@@ -85,3 +85,18 @@ vaadin-scroller[slot="drawer"][overflow~="bottom"] {
 .periode-plus-button {
   margin-left: 30px;
 }
+
+.ov-title {
+  -webkit-box-shadow: 0px 0px 14px 2px rgba(0, 0, 0, 0.55);
+  box-shadow: 0px 0px 14px 2px rgba(0, 0, 0, 0.55);
+
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+
+  background-color: var(--lumo-base-color) linear-gradient(var(--lumo-contrast-5pct), var(--lumo-contrast-5pct));
+  margin: 10px;
+  width: 600px;
+  height: 300px;
+  color: var(--lumo-primary-text-color);;
+  padding: 10px;
+}
