--- a/frontend/themes/hypnobook/main-layout.css
+++ b/frontend/themes/hypnobook/main-layout.css
@@ -86,17 +86,53 @@ vaadin-scroller[slot="drawer"][overflow~="bottom"] {
   margin-left: 30px;
 }
 
+.ov-card {
+  border: 2px solid #1C6EA4;
+  display: grid;
+  vertical-align: top;
+}
+
 .ov-title {
-  -webkit-box-shadow: 0px 0px 14px 2px rgba(0, 0, 0, 0.55);
-  box-shadow: 0px 0px 14px 2px rgba(0, 0, 0, 0.55);
-
-  -webkit-border-radius: 10px;
-  border-radius: 10px;
-
-  background-color: var(--lumo-base-color) linear-gradient(var(--lumo-contrast-5pct), var(--lumo-contrast-5pct));
+  /*display: inline-block;*/
+  /*-webkit-box-sizing: content-box;*/
+  /*-moz-box-sizing: content-box;*/
+  /*box-sizing: content-box;*/
+  /*width: 160px;*/
   margin: 10px;
-  width: 600px;
-  height: 300px;
-  color: var(--lumo-primary-text-color);;
-  padding: 10px;
+  /*padding: 3px;*/
+  /*overflow: hidden;*/
+  /*border: none;*/
+  font: normal 16px/1 Arial Black, Gadget, sans-serif;
+  color: rgba(0, 0, 0, 1);
+  text-align: center;
+  /*-o-text-overflow: ellipsis;*/
+  /*text-overflow: ellipsis;*/
+  text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.64);
+  border: 2px solid #1C6EA4;
+  /*float: top;*/
+}
+
+.ov-subtitle {
+  /*display: inline-block;*/
+  /*-webkit-box-sizing: content-box;*/
+  /*-moz-box-sizing: content-box;*/
+  /*box-sizing: content-box;*/
+  /*width: 160px;*/
+  padding: 3px;
+  /*overflow: hidden;*/
+  /*border: none;*/
+  font: italic normal normal 16px/1 Arial, Helvetica, sans-serif;
+  color: rgba(0, 0, 0, 1);
+  text-align: center;
+  /*-o-text-overflow: ellipsis;*/
+  /*text-overflow: ellipsis;*/
+  border: 2px solid #1C6EA4;
+}
+
+.ov-in-money {
+  border: 2px solid #1C6EA4;
+}
+
+.ov-out-money {
+  border: 2px solid #1C6EA4;
 }
